tests/errors/parser/wrong-binary-num.futil
component main() -> () {
  cells { }
  wires {
    r.in = 10'b22;
  }
  control { }
}
