tests/errors/parser/wrong-binary-num.expect
---CODE---
1
---STDERR---
Error: Failed to parse `tests/errors/parser/wrong-binary-num.futil`:  --> 4:16
  |
4 |     r.in = 10'b22;
  |                ^^
  |
  = Expected binary number
